--- a/07_image_embeddings/image-embeddings.ipynb
+++ b/07_image_embeddings/image-embeddings.ipynb
@@ -73,27 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'name': 'DESKTOP-9R2C8GS', 'cluster_name': 'elasticsearch', 'cluster_uuid': '7_cvLRj6TRKwpst7RR8weA', 'version': {'number': '8.14.0', 'build_flavor': 'default', 'build_type': 'zip', 'build_hash': '8d96bbe3bf5fed931f3119733895458eab75dca9', 'build_date': '2024-06-03T10:05:49.073003402Z', 'build_snapshot': False, 'lucene_version': '9.10.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
+       "ObjectApiResponse({'name': 'instance-0000000001', 'cluster_name': '6245dd37d2934813bc1c46b937dd30d5', 'cluster_uuid': '61aAGaZITvaeXGEEdo1Ilg', 'version': {'number': '8.13.4', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': 'da95df118650b55a500dcc181889ac35c6d8da7c', 'build_date': '2024-05-06T22:04:45.107454559Z', 'build_snapshot': False, 'lucene_version': '9.10.0', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create the client instance\n",
-    "client = Elasticsearch(\n",
-    "  \"https://localhost:9200/\",\n",
-    "  api_key=os.getenv(\"ELASTIC_API_KEY\"),\n",
-    "  ssl_context=ssl.create_default_context(cafile=os.getenv(\"ELASTIC_CERTIFICATE_DIR\")),\n",
+    "cloud = False\n",
+    "\n",
+    "if cloud:\n",
+    "    client = Elasticsearch(\n",
+    "    cloud_id=os.getenv(\"ELASTIC_CLOUD_ID\"),\n",
+    "    basic_auth=(\"elastic\", os.getenv(\"ELASTIC_PASSWORD\")),\n",
     ")\n",
+    "else:\n",
+    "  \n",
+    "  client = Elasticsearch(\n",
+    "    \"https://localhost:9200/\",\n",
+    "    api_key=os.getenv(\"ELASTIC_API_KEY\"),\n",
+    "    ssl_context=ssl.create_default_context(cafile=os.getenv(\"ELASTIC_CERTIFICATE_DIR\")),\n",
+    "  )\n",
     "# Successful response!\n",
     "client.info()"
    ]
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +124,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'image_index'})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
