--- a/09_text2image/text2image.ipynb
+++ b/09_text2image/text2image.ipynb
@@ -7901,7 +7901,8 @@
       "execution_count": 1,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qPejREUcWHis",
         "outputId": "002302eb-f641-439a-bb7c-3e36ef57b0d6"
@@ -8016,7 +8017,8 @@
         "Stable Diffusion es un modelo de difusión latente de texto a imagen. Se denomina modelo de difusión latente porque trabaja con una representación de la imagen de menor dimensión en lugar del espacio de píxeles real, lo que lo hace más eficiente en términos de memoria. El codificador comprime la imagen en una representación más pequeña, y un decodificador para convertir la representación comprimida de nuevo en una imagen. Para los modelos de texto a imagen, necesitarás un tokenizador y un codificador para generar incrustaciones de texto.\n",
         "\n",
         "El modelo Stable Diffusion está compuesto por 3 modelos:\n",
-        "1. **Variational Auto Encoder (VAE)**: Se trata de un modelo encoder-decoder, que aprende a convertir una imagen en ruido, y a partir de ese ruido, volver a generar la imagen. Partiendo del ruido, se encarga de transformar la imágen con ruido en la imagen que queremos.\n",
+        "1. **Variational Auto Encoder (VAE)**: Se trata de un modelo encoder-decoder,  que se utiliza para reducir la dimensionalidad de las imágenes, comprimiéndolas en un espacio latente más manejable. Esto facilita el proceso de difusión, ya que operar en un espacio latente más pequeño es más eficiente computacionalmente.\n",
+        "Después de que el modelo de difusión ha generado una representación latente de la imagen, el VAE se utiliza para decodificar esta representación de vuelta a una imagen en el espacio original de píxeles.\n",
         "2. **U-NET**: La U-Net tiene una parte codificadora y otra decodificadora, ambas compuestas por bloques ResNet. El codificador comprime una representación de imagen en una representación de imagen de menor resolución y el descodificador descodifica la representación de imagen de menor resolución de vuelta a la representación de imagen de mayor resolución original que supuestamente es menos ruidosa. El objetivo de esta parte es aprender a extraer el ruido necesario a eliminar en cada paso para que finalmente el VAE sea capaz de obtener la imagen final.\n",
         "3. **Text Encoder**: El codificador de texto se encarga de transformar el texto de entrada (por ejemplo, «Un astronauta montando a caballo») en un espacio de incrustación comprensible para la U-Net. Suele tratarse de un codificador simple basado en transformadores que asigna una secuencia de tokens de entrada a una secuencia de incrustaciones de texto latentes.\n",
         "\n"
@@ -8053,7 +8055,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "NcNAf2FmdrhB",
         "outputId": "cf41e397-398c-45da-fdce-e85a6a3940ec"
@@ -8106,7 +8109,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "q4EYDAb8dJ6z",
         "outputId": "455c7eb8-b066-48cb-8409-a5d53a389120"
