--- a/07_image_embeddings/image-embeddings.ipynb
+++ b/07_image_embeddings/image-embeddings.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install ssl pillow matplotlib"
+    "!pip install pillow matplotlib"
    ]
   },
   {
